WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153875
Fix the EFL clean build after
r196123
https://bugs.webkit.org/show_bug.cgi?id=153875
Summary
Fix the EFL clean build after r196123
Csaba Osztrogonác
Reported
2016-02-04 10:45:52 PST
https://trac.webkit.org/changeset/196123
broke the clean build on EFL. error log: c++: error: DerivedSources/WebCore/JSDOMSettableTokenList.cpp: No such file or directory c++: fatal error: no input files compilation terminated. The problem is that DOMSettableTokenList.idl is guarded since
r196123
and DerivedSources/WebCore/JSDOMSettableTokenList.cpp isn't generated at all. EWS and buildbot didn't notice this error, because the stale generated file remained in WebKitBuild. cc-ing EFL maintainers to fix the broken build.
Attachments
Patch
(1.03 KB, patch)
2016-02-04 10:51 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.18 KB, patch)
2016-02-04 11:05 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.88 KB, patch)
2016-02-04 11:13 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-02-04 10:46:34 PST
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/26477
Chris Dumez
Comment 2
2016-02-04 10:47:32 PST
Hmm, I updated CMakeList.txt to stop referring to JSDOMSettableTokenList.cpp though, odd.
Chris Dumez
Comment 3
2016-02-04 10:51:24 PST
Created
attachment 270666
[details]
Patch
Chris Dumez
Comment 4
2016-02-04 10:51:51 PST
Letting EWS chew on this speculative fix.
Csaba Osztrogonác
Comment 5
2016-02-04 10:52:35 PST
(In reply to
comment #2
)
> Hmm, I updated CMakeList.txt to stop referring to JSDOMSettableTokenList.cpp > though, odd.
AFAIK JSDOMSettableTokenList.cpp name is generated from DOMSettableTokenList.idl filename and automatically added to the build by a cmake macro.
Csaba Osztrogonác
Comment 6
2016-02-04 10:54:01 PST
(In reply to
comment #4
)
> Letting EWS chew on this speculative fix.
Unfortunately EWS won't be able to check it, because it is an incremental build issue. The stale generated cpp is still on the bot. Doesn't GTK port need this idl?
Chris Dumez
Comment 7
2016-02-04 10:54:29 PST
(In reply to
comment #5
)
> (In reply to
comment #2
) > > Hmm, I updated CMakeList.txt to stop referring to JSDOMSettableTokenList.cpp > > though, odd. > > AFAIK JSDOMSettableTokenList.cpp name is generated from > DOMSettableTokenList.idl > filename and automatically added to the build by a cmake macro.
Ok, that's what I figured. So my speculative fix drops the idl file from the CMakeLists.txt. EFL does not need to know about this IDL file at all. GTK does care about this IDL though but I am hoping the change is fine because the PlatformGTK.cmake file includes DOMSettableTokenList.idl still.
Chris Dumez
Comment 8
2016-02-04 10:57:12 PST
(In reply to
comment #7
)
> (In reply to
comment #5
) > > (In reply to
comment #2
) > > > Hmm, I updated CMakeList.txt to stop referring to JSDOMSettableTokenList.cpp > > > though, odd. > > > > AFAIK JSDOMSettableTokenList.cpp name is generated from > > DOMSettableTokenList.idl > > filename and automatically added to the build by a cmake macro. > > Ok, that's what I figured. So my speculative fix drops the idl file from the > CMakeLists.txt. EFL does not need to know about this IDL file at all. > > GTK does care about this IDL though but I am hoping the change is fine > because the PlatformGTK.cmake file includes DOMSettableTokenList.idl still.
Hmm, GTK EWS seems unhappy after all. I am unsure how to fix it then.
Csaba Osztrogonác
Comment 9
2016-02-04 11:03:12 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > > (In reply to
comment #5
) > > > (In reply to
comment #2
) > > > > Hmm, I updated CMakeList.txt to stop referring to JSDOMSettableTokenList.cpp > > > > though, odd. > > > > > > AFAIK JSDOMSettableTokenList.cpp name is generated from > > > DOMSettableTokenList.idl > > > filename and automatically added to the build by a cmake macro. > > > > Ok, that's what I figured. So my speculative fix drops the idl file from the > > CMakeLists.txt. EFL does not need to know about this IDL file at all. > > > > GTK does care about this IDL though but I am hoping the change is fine > > because the PlatformGTK.cmake file includes DOMSettableTokenList.idl still. > > Hmm, GTK EWS seems unhappy after all. I am unsure how to fix it then.
maybe these lines in the GTK cmake system helps: (absolutely speculative) list(APPEND WebCore_IDL_FILES html/DOMSettableTokenList.idl ) Otherwise EFL clean build is happy with this change.
Chris Dumez
Comment 10
2016-02-04 11:05:15 PST
Created
attachment 270670
[details]
Patch
Chris Dumez
Comment 11
2016-02-04 11:06:48 PST
Comment on
attachment 270670
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=270670&action=review
> Source/WebCore/PlatformGTK.cmake:-718 > - html/DOMSettableTokenList.idl
Someone from the GTK port should confirm but I think I was told it is fine to drop as long as they are in the "Unstable" API list.
Chris Dumez
Comment 12
2016-02-04 11:13:10 PST
Created
attachment 270671
[details]
Patch
Michael Catanzaro
Comment 13
2016-02-04 11:37:02 PST
Comment on
attachment 270671
[details]
Patch Indeed, since it's in the unstable list, let's just drop it.
Chris Dumez
Comment 14
2016-02-04 11:38:15 PST
Comment on
attachment 270671
[details]
Patch Clearing flags on attachment: 270671 Committed
r196136
: <
http://trac.webkit.org/changeset/196136
>
Chris Dumez
Comment 15
2016-02-04 11:38:20 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 16
2016-02-04 13:29:28 PST
(In reply to
comment #14
)
> Comment on
attachment 270671
[details]
> Patch > > Clearing flags on attachment: 270671 > > Committed
r196136
: <
http://trac.webkit.org/changeset/196136
>
It broke the Apple Mac cmake build.
Csaba Osztrogonác
Comment 17
2016-02-10 10:07:32 PST
(In reply to
comment #16
)
> > Committed
r196136
: <
http://trac.webkit.org/changeset/196136
> > > It broke the Apple Mac cmake build.
The cmake build is still broken a week ago due to this change. Is the Mac cmake build maintained?
Csaba Osztrogonác
Comment 18
2016-02-14 03:37:26 PST
(In reply to
comment #17
)
> (In reply to
comment #16
) > > > Committed
r196136
: <
http://trac.webkit.org/changeset/196136
> > > > > It broke the Apple Mac cmake build. > > The cmake build is still broken a week ago due to this change. > Is the Mac cmake build maintained?
ping?
Chris Dumez
Comment 19
2016-02-14 22:20:25 PST
(In reply to
comment #18
)
> (In reply to
comment #17
) > > (In reply to
comment #16
) > > > > Committed
r196136
: <
http://trac.webkit.org/changeset/196136
> > > > > > > It broke the Apple Mac cmake build. > > > > The cmake build is still broken a week ago due to this change. > > Is the Mac cmake build maintained? > > ping?
I landed a couple of fixes but there are still more issues (unrelated to my change).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug