Unreviewed, fix the EFL clean build after r196123 https://bugs.webkit.org/show_bug.cgi?id=153875

* CMakeLists.txt:
* PlatformGTK.cmake:
* PlatformMac.cmake:
* html/DOMSettableTokenList.h:
* html/DOMSettableTokenList.idl:

Canonical link: https://commits.webkit.org/171978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196136 268f45cc-cd09-0410-ab3c-d52691b4dbfc